# controllers/user.py
@@ -1,0 +1,56 @@
+""" Handlers for the user endpoint  """
+
+def create():
+    """ Parse command line parameters.
+
+        Args:
+        args ([str]): command line parameters as list of strings
+
+        Returns:
+        :obj:`argparse.Namespace`: command line parameters namespace
+    """
+def get():
+    """ Parse command line parameters.
+
+        Args:
+        args ([str]): command line parameters as list of strings
+
+        Returns:
+        :obj:`argparse.Namespace`: command line parameters namespace
+    """
+
+def update():
+    """ Parse command line parameters.
+
+        Args:
+        args ([str]): command line parameters as list of strings
+
+        Returns:
+        :obj:`argparse.Namespace`: command line parameters namespace
+    """
+
+def delete():
+    """ Parse command line parameters.
+
+        Args:
+        args ([str]): command line parameters as list of strings
+
+        Returns:
+        :obj:`argparse.Namespace`: command line parameters namespace
+    """
+
+def get_list():
+    """ Parse command line parameters.
+
+        Args:
+        args ([str]): command line parameters as list of strings
+
+        Returns:
+        :obj:`argparse.Namespace`: command line parameters namespace
+    """
+
+
+
+
+
+
